--- a/project-base/pom.xml
+++ b/project-base/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.fr2501.project</groupId>
-  <artifactId>project</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <groupId>com.fr2501.project-base</groupId>
+  <artifactId>project-base</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
 
-  <name>project</name>
+  <name>project-base</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
